import org.gradle.api.tasks.bundling.AbstractArchiveTask
import org.springframework.boot.gradle.tasks.run.BootRun

buildscript {
  repositories {
    gradlePluginPortal()
    mavenCentral()
    // Google Maven mirror as fallback for CI/CD environments
    maven {
      url = uri("https://maven-central.storage-download.googleapis.com/maven2/")
    }
  }
}

plugins {
  id 'java'
  id 'org.springframework.boot' version '4.1.1'
  // Spotless for the code style
  id "com.diffplug.spotless" version "8.10.1"
  id "io.github.ben-manes.versions" version "0.61.0"
}

apply plugin: 'io.spring.dependency-management'

springBoot {
  mainClass = 'com.odde.donut.DonutApplication'
  buildInfo {
    excludes = ['time']
    properties {
      additional = [
        commit: providers.exec {
          commandLine 'git', 'rev-parse', 'HEAD'
          workingDir rootDir
        }.standardOutput.asText.map { it.trim() }
      ]
    }
  }
}

group = 'com.odde'
version = '0.0.1-SNAPSHOT'
java {
  sourceCompatibility = 25
  targetCompatibility = 25
}

tasks.withType(JavaCompile).configureEach {
  options.encoding = 'UTF-8'
}

tasks.withType(AbstractArchiveTask).configureEach {
  preserveFileTimestamps = false
}

configurations {
  compileOnly {
    extendsFrom annotationProcessor
  }
}

repositories {
  gradlePluginPortal()
  mavenCentral()
  // Google Maven mirror as fallback for CI/CD environments
  maven {
    url = uri("https://maven-central.storage-download.googleapis.com/maven2/")
  }
}

def jdkUnsafeMemoryAccessJvmArgs = ['--sun-misc-unsafe-memory-access=allow']

dependencies {
  implementation platform('com.google.cloud:libraries-bom:26.87.0')
  implementation 'com.google.cloud:google-cloud-storage:2.72.0'
  implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
  implementation 'com.fasterxml.jackson.datatype:jackson-datatype-hibernate7:2.22.2'
  implementation 'org.springframework.boot:spring-boot-starter-web'
  implementation 'org.springframework.boot:spring-boot-starter-websocket'
  implementation 'org.springframework.boot:spring-boot-starter-data-redis'
  implementation 'org.springframework.boot:spring-boot-starter-flyway'
  implementation 'org.flywaydb:flyway-mysql'
  implementation 'org.springframework.session:spring-session-core'
  implementation 'io.micrometer:micrometer-core'
  implementation 'org.springframework.boot:spring-boot-starter-validation'
  implementation 'org.springframework.boot:spring-boot-starter-security'
  implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
  implementation 'org.springdoc:springdoc-openapi-starter-webmvc-api:3.1.0'
  implementation 'com.openai:openai-java:4.52.0'
  implementation 'org.yaml:snakeyaml:2.6'
  // RxJava2 for Flowable streaming support
  implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
  implementation 'net.javacrumbs.shedlock:shedlock-spring:7.9.0'
  implementation 'net.javacrumbs.shedlock:shedlock-provider-jdbc-template:7.9.0'
  implementation 'org.eclipse.jgit:org.eclipse.jgit:7.7.1.202607240634-r'
  compileOnly 'org.projectlombok:lombok:1.18.46'
  annotationProcessor 'org.projectlombok:lombok:1.18.46'
  developmentOnly 'org.springframework.boot:spring-boot-devtools'
  runtimeOnly 'com.mysql:mysql-connector-j:26.7.0'
  annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
  testImplementation 'org.springframework.boot:spring-boot-starter-test'
  testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
  testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
  useJUnitPlatform()
  jvmArgs(jdkUnsafeMemoryAccessJvmArgs)
  testLogging {
    exceptionFormat = 'full'
  }
}

tasks.named('bootRun') {
  jvmArgs(jdkUnsafeMemoryAccessJvmArgs)
}

tasks.register("bootRunE2E", BootRun) {
  group = "application"
  description = "Runs Donut SpringBoot application with the e2e profile (SUT; DevTools on classpath for live reload with pnpm backend:watch)"
  classpath = sourceSets.main.runtimeClasspath
  mainClass = springBoot.mainClass
  systemProperty("spring.profiles.active", "e2e")
  jvmArgs(jdkUnsafeMemoryAccessJvmArgs)
}

spotless {
  java {
    importOrder() // standard import order
    removeUnusedImports()
    googleJavaFormat()
    targetExclude("build/**")
  }
}

tasks.register("lint") {
  dependsOn spotlessCheck
}

def configureSpringBootTask = { task, description, taskName ->
  task.group = 'application'
  task.description = description
  task.classpath = sourceSets.main.runtimeClasspath
  task.mainClass = 'com.odde.donut.DonutApplication'
  task.systemProperty("spring.profiles.active", "test")
  task.args = ['--server.port=0'] // Using 0 will let Spring Boot pick a random available port
  task.systemProperty("odd-e.donut.task", taskName)
  task.jvmArgs(jdkUnsafeMemoryAccessJvmArgs)
}

// Register and configure the migrateTestDB task
tasks.register("migrateTestDB", JavaExec) {
  configureSpringBootTask(delegate, "Runs DB migration for test profile", "migrateTestDB")
  ignoreExitValue = false  // Make the task fail if the Java process exits with non-zero
  classpath = sourceSets.main.runtimeClasspath.filter { file ->
    !file.name.contains('spring-boot-devtools')
  }
}

// Register and configure the generateOpenAPIDocs task
tasks.register('generateOpenAPIDocs', JavaExec) {
  configureSpringBootTask(delegate, 'Generate OpenAPI documentation', "generateOpenAPIDocs")
  // Exclude devtools to avoid non-zero exit due to restart hooks
  classpath = sourceSets.main.runtimeClasspath.filter { file ->
    !file.name.contains('spring-boot-devtools')
  }
  // Start with settings that avoid DB requirement while keeping beans available for scanning
  systemProperty("spring.main.lazy-initialization", "true")
  systemProperty("spring.flyway.enabled", "false")
  systemProperty("spring.jpa.properties.hibernate.dialect", "org.hibernate.dialect.MySQLDialect")
  systemProperty("spring.datasource.hikari.initialization-fail-timeout", "0")
}
